# grove-bernardy-chatzikyriakidis-naloma2021

./: .gitignore  .gitmodules  LICENSE  README.md  grove-bernardy-chatsikyriakidis-naloma2021.cabal  grove-bernardy-chatzikyriakidis-naloma2021.cabal  shell.nix
app/: Main.hs
src/Fragment/: Fragment.hs  RSA_Examples.hs
src/Representations/: Algebraic.hs  Representations.hs
src/Representations/Bayesian/: Bayesian.hs  Probability.hs
src/Representations/Eval/: Model.hs
src/Representations/FOL/: FOL.hs
